# wechat_login_demo

./: README.md  main.py  print_java.py  pyproject.toml  wechat_config.py
templates/: index.html  success.html
